fixing spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,6 +113,7 @@ footer {
         margin: 0 auto;
         display: table;
         width: fit-content;
+        margin-bottom: 20px;
     }
 }
 
